
0.4.1
=====

* FEATURE: AdminOnlyTopics replaced by Special:TopicsAdmin.
* FEATURE: Upgrade to Spring Framework 2.0.

0.4.0
=====

* FEATURE: Add support for Mediawiki templates (see 
  http://meta.wikimedia.org/wiki/Help:Templates).
* FEATURE: Replace file persistency mode with an embedded version of the
  HSQL database.
* FEATURE: Major update to the JAMWiki parser code.
* BUG: Properly escape ampersands from the parser to ensure XHTML output.
* FEATURE: Updated interwiki file from Axel Kramer (axelclk).
* FEATURE: Process interwiki prefixes case-insensitive.
* BUG: "Move" tab being incorrectly hidden on topic pages.
* BUG: Resolve issues that could cause upgrades to fail.
* FEATURE: Remove ability to automatically upgrade from JAMWiki versions
  prior to 0.2.0.
* FEATURE: Require admin user login to perform an upgrade.
* FEATURE: Remove Special:AllTopics; it was replaced by Special:Allpages
  in JAMWiki 0.3.0.
* FEATURE: Add JUnit test framework.
* FEATURE: Change default logo to submission from Oliver (okohll).
* FEATURE: Add additional support for the DB2/400 database.
* FEATURE: Updated MS SQL support from Robert Matyja (dlpa).
* BUG: Fix possible database transaction blocking during setup using
  suggestions from Robert Matyja (dlpa).
* FEATURE: Updated Hungarian translations from Daniel Tar (bDaneE).
* FEATURE: Updated Polish translations from Robert Matyja (dlpa).
* FEATURE: Updated German translations from Axel Kramer (axelclk).

0.3.6
=====

* BUG: Fix setup.jsp typo that caused compile errors.
* FEATURE: Updated Hungarian translations from Daniel Tar (bDaneE).
* FEATURE: Updated Polish translations from Robert Matyja (dlpa).
* FEATURE: Updated Chinese translations from ewen0930.
* FEATURE: Added French translations from Henri Gomez (hgomez).

0.3.5
=====

* FEATURE: Add support for topics of the form "Topic/Subtopic".
* FEATURE: Support for interwiki links ([[Wikipedia:Main Page]]).
* FEATURE: Re-engineer link handling to simplify the code.